[tool.poetry]
name = "delivery_service"
version = "0.1.0"
description = "Delivery Service API"
authors = ["Your Name <your.email@example.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.0"
alembic = "^1.10.3"
pymysql = "^1.0.3"
aiomysql = "^0.2.0"
cryptography = "^44.0.2"
redis = "^5.2.1"
aio-pika = "^9.0.5"
httpx = "^0.28.1"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.20"
itsdangerous = "^2.1.2"
loguru = "^0.7.0"
greenlet = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
aiosqlite = "^0.18.0"
pytest-mock = "^3.10.0"
black = "^24.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.1"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "B", "I", "N", "UP", "ANN", "C4", "SIM", "T10", "A", "COM", "PT", "ARG"]
ignore = ["B008"]
unfixable = ["B"]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "sqlalchemy", "alembic"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"